--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="C:\Users\User\vsprojects\razgovori\main.css">
+    <link rel="icon" href="/ikonka.png" type="image/x-icon" style="border-radius: 10px;">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,19 @@
 </head>
 <body bgcolor="black">
     <br>
-    <a style="text-decoration: none; color: aliceblue; margin-left: 10%;" href="https://youtube.ru" ><font size="+1.5" face="Bahnschrift"><b>← Назад</b></font></a>
+    <a style="text-decoration: none; color: aliceblue; margin-left: 10%;" href="https://youtube.ru" ><font size="+1.5" face="franklin gothic medium">← Назад</font></a>
     <br>
     <br>
-    <font color="white" font size="+3" id="titletext" face="Bahnschrift" style="margin-left: 10%;"><b>Разговоры о важном</b></font>
+    <font color="white" font size="+3" id="titletext" face="franklin gothic medium" style="margin-left: 10%;">Разговоры о важном</font>
     <br>
     <br>
-    <font color="white" font size="+2" id="titletext" face="Bahnschrift" style="margin-left: 10%;"><b>День космонавтики. Мы первые!</b></font>
+    <font color="white" font size="+2" id="titletext" face="franklin gothic medium" style="margin-left: 10%;">День памяти о геноциде советского народа нацистами и их пособниками</font>
+    <br>
     <br>
     <video style="margin-left: 10%; width: 80%; border-radius: 20px;" src="bebra.webm" controls>
-        <p>АНДРЕЙ ХУЕСОС</p>
+        <p>
+            Nothing to see here...
+        </p>
     </video>
 </iframe>
 </body>
